Fix on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -235,12 +235,6 @@ section
     {
         margin-bottom: 180px;
     }
-
-    #home
-    {
-        margin-bottom: -100px;
-    }
-
 }
 
 .list-group {
